service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: gob-gab
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31516
